--- a/chat.html
+++ b/chat.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/chat.css">
+    <link rel="stylesheet" href="css/chat.css">
     <title>chatbot</title>
 </head>
 <body>
     <div class="background-box"></div>
     <div class="header"></div>
-    <img class="logo" src="../img/Sparklogo.svg" alt="Logo" />
-    <img class="icon" src="../img/star.svg" alt="Icon" />
-    <img class="nightmode" src="../img/darkzone.svg" alt="nightmode">
+    <img class="logo" src="img/Sparklogo.svg" alt="Logo" />
+    <img class="icon" src="img/star.svg" alt="Icon" />
+    <img class="nightmode" src="img/darkzone.svg" alt="nightmode">
 
 
     <div class="chat-container">
@@ -109,8 +109,8 @@
     </div>
         
     
-    <script src="../js/inputbox.js"></script>
-    <script src="../js/darkMode.js"></script> 
+    <script src="js/inputbox.js"></script>
+    <script src="js/darkMode.js"></script> 
 
 </div>
 </body>
