--- a/hello.html
+++ b/hello.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/hello.css">
+    <link rel="stylesheet" href="css/hello.css">
     <title>landing</title>
 </head>
 <body>
     <div class="background-box"></div>
     <div class="header"></div>
-    <img class="logo" src="../img/Sparklogo.svg" alt="Logo" />
-    <img class="icon" src="../img/star.svg" alt="Icon" />
-    <img class="nightmode" src="../img/darkzone.svg" alt="nightmode">
+    <img class="logo" src="img/Sparklogo.svg" alt="Logo" />
+    <img class="icon" src="img/star.svg" alt="Icon" />
+    <img class="nightmode" src="img/darkzone.svg" alt="nightmode">
 
-    <img class="kuzu" src="../img/Kuzu.svg" alt="Large Image"/>
-    <img class="emoji" src="../img/emologo.svg" alt="Medium Image" />
+    <img class="kuzu" src="img/Kuzu.svg" alt="Large Image"/>
+    <img class="emoji" src="img/emologo.svg" alt="Medium Image" />
     <div class="help-text">Hi, I'm Kuzu. <br> How can I help you today?</div>
 
     <div class="suggestion-container">
@@ -64,10 +64,10 @@
             <textarea id="dynamicInput" class="input-field" placeholder="Type here..." rows="1"></textarea>
             <div class="line-divider"></div>
             <div class="send-btn">
-                <img class="send-icon" src="../img/refresh.svg" alt="Send Icon" />
+                <img class="send-icon" src="img/refresh.svg" alt="Send Icon" />
             </div>
             <div class="icon-btn">
-                <img class="attachment-icon" src="../img/sent.svg" alt="Attachment Icon" />
+                <img class="attachment-icon" src="img/sent.svg" alt="Attachment Icon" />
             </div>
         </div>
     </div>
