--- a/chat.html
+++ b/chat.html
@@ -100,10 +100,10 @@
             <textarea id="dynamicInput" class="input-field" placeholder="Type here..." rows="1"></textarea>
             <div class="line-divider"></div>
             <div class="send-btn">
-                <img class="send-icon" src="../img/refresh.svg" alt="Send Icon" />
+                <img class="send-icon" src="img/refresh.svg" alt="Send Icon" />
             </div>
             <div class="icon-btn">
-                <img class="attachment-icon" src="../img/sent.svg" alt="Attachment Icon" />
+                <img class="attachment-icon" src="img/sent.svg" alt="Attachment Icon" />
             </div>
         </div>
     </div>
