--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <div id="chatbot-modal" class="chatbot-modal">
             <div class="chatbot-content">
                 <span class="close-btn" onclick="closeChatbot()">&times;</span>
-                <iframe src="../html/landing.html" class="chatbot-frame"></iframe>
+                <iframe src="landing.html" class="chatbot-frame"></iframe>
             </div>
             
         </div>
         
-    <script src="../js/chatbot.js"></script>
-    <script src="../js/darkMode.js"></script> 
+    <script src="js/chatbot.js"></script>
+    <script src="js/darkMode.js"></script> 
 </body>
 </html>
