--- a/landing.html
+++ b/landing.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/landing.css">
+    <link rel="stylesheet" href="css/landing.css">
     <title>landing</title>
 </head>
 <body>
     <div class="background-box"></div>
     <div class="header"></div>
-    <img class="logo" src="../img/Sparklogo.svg" alt="Logo" />
-    <img class="icon" src="../img/star.svg" alt="Icon" />
-    <img class="nightmode" src="../img/darkzone.svg" alt="nightmode">
+    <img class="logo" src="img/Sparklogo.svg" alt="Logo" />
+    <img class="icon" src="img/star.svg" alt="Icon" />
+    <img class="nightmode" src="img/darkzone.svg" alt="nightmode">
 
     <div class="form-container">
         <h2>REGISTER</h2>
@@ -77,15 +77,15 @@
             <textarea id="dynamicInput" class="input-field" placeholder="Type here..." rows="1"></textarea>
             <div class="line-divider"></div>
             <div class="send-btn">
-                <img class="send-icon" src="../img/refresh.svg" alt="Send Icon" />
+                <img class="send-icon" src="img/refresh.svg" alt="Send Icon" />
             </div>
             <div class="icon-btn">
-                <img class="attachment-icon" src="../img/sent.svg" alt="Attachment Icon" />
+                <img class="attachment-icon" src="img/sent.svg" alt="Attachment Icon" />
             </div>
         </div>
     </div>
         
-    <script src="../js/inputbox.js"></script>
-    <script src="../js/darkMode.js"></script> 
+    <script src="js/inputbox.js"></script>
+    <script src="js/darkMode.js"></script> 
 </body>
 </html>
