--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </footer>
 
     <!-- Chatbot Logo -->
-    <img src="../img/botlogo.png" alt="Chatbot" class="chatbot-logo" onclick="openChatbot()">
+    <img src="img/botlogo.png" alt="Chatbot" class="chatbot-logo" onclick="openChatbot()">
     
 
 
