--- a/hello.html
+++ b/hello.html
@@ -79,7 +79,7 @@
         window.location.href = "hello.html"; // Redirects to hello.html
     });
 </script>
-    <script src="../js/inputbox.js"></script>
-    <script src="../js/darkMode.js"></script> 
+    <script src="js/inputbox.js"></script>
+    <script src="js/darkMode.js"></script> 
 </body>
 </html>
